--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ body{
 h1{
 	font-family: 'Montserrat';
 	font-weight: 900;
-	size: 3rem;
+	font-size: 3.5rem;
 	line-height: 1.5;
 }
 
@@ -23,3 +23,37 @@ h1{
 	color: #fff;
 }
 
+/*NAVIGATION BAR*/
+
+.navbar{
+	padding: 0 0 4.5rem;
+}
+
+.navbar-brand {
+	font-family: "Ubuntu";
+	font-size: 2.5rem;
+	font-weight: bold;
+	padding-bottom:50px;
+}
+
+.nav-item{
+	padding: 0 18px;
+}
+
+.nav-link{
+	font-size: 1.2rem;
+	font-family: "Montserrat";
+}
+
+/*DOWNLOAD-BUTTONS*/
+
+.download-button {
+	margin: 5% 3% 5% 0%;
+}
+
+/*TITLE IMAGE*/
+
+.title-image{
+	width: 60%;
+	transform: rotate(25deg);
+}
