--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,13 @@ h1{
 	line-height: 1.5;
 }
 
+h3{
+	font-family: 'Montserrat';
+	font-weight: 600;
+	font-size: 1.5rem;
+	line-height: 2;
+}
+
 /*CLASS TAG*/
 
 .container-fluid{
@@ -57,3 +64,4 @@ h1{
 	width: 60%;
 	transform: rotate(25deg);
 }
+
