--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,13 @@ h1{
 	line-height: 1.5;
 }
 
+h2{
+	font-family: 'Montserrat';
+	font-weight: 900;
+	size: 3rem;
+	line-height: 1.5;
+}
+
 h3{
 	font-family: 'Montserrat';
 	font-weight: 600;
@@ -88,4 +95,33 @@ p{
 
 .fontawesome:hover{
 	color: #ff4c68;
+}
+
+/*Testimonials Section*/
+
+#testimonials{
+	text-align: center;
+	background-color: #ef8172;
+	color: #fff;
+}
+
+.testimonial-image{
+	width: 10%;
+	border-radius: 100%;
+	margin: 20px;
+}
+
+.carousel-item{
+	padding: 7% 15%;
+}
+
+#press{
+	background-color: #ef8172;
+	text-align: center;
+	padding: 3%;
+}
+
+.press-logo{
+	width: 15%;
+	margin: 20px 20px 50px;
 }
