--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,7 @@ p{
 /*CLASS TAG*/
 
 .container-fluid{
-	padding: 10% 15%;
+	padding: 3% 15% 7%;
 }
 
 /*ID TAG*/
@@ -73,12 +73,20 @@ p{
 .title-image{
 	width: 60%;
 	transform: rotate(25deg);
+	position: absolute;
+	right: 30%;
+	
+
 }
 
 /*Features Section*/
 
 #features{
 	padding: 7% 15%;
+	background-color: #fff;
+	position: relative;
+	/*z-index: 1;*/
+
 }
 
 .feature-box{
