--- a/css/styles.css
+++ b/css/styles.css
@@ -144,3 +144,45 @@ p{
 .pricing-column{
 	padding: 3% 2%;
 }
+
+/*Call to Action Section*/
+
+#cta{
+	background-color: #ff4c68;
+	text-align: center;
+	color: #fff;
+}
+
+.big-heading{
+  padding: 7% 15%;
+  font-size: 3.5rem;
+  line-height: 1.5;
+}
+
+.download-button{
+	margin: 5% 3% 5% 0;
+}
+
+/*Footer Section*/
+
+#footer{
+	background-color: #fff;
+	text-align: center;
+	padding: 7% 15%;
+
+}
+
+.social-icon{
+	 margin: 20px 10px;
+}
+
+@media (max-width: 1028px){
+	#title{
+		text-align: center;
+	}
+
+	.title-image{
+		position: static;
+		transform: rotate(0);
+	}
+}
